--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,23 +1,30 @@
-version: "2.0"
-
-stories:
-
-- story: chitchat
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: chitchat
-  - action: utter_chitchat
-
-- story: faq
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: faq
-  - action: utter_faq
-
-- story: contact us form
-  steps:
-  - intent: contact_us
-  - action: contact_us_form
-  - active_loop: contact_us_form
+#version: "3.0"
+#
+#stories:
+#
+#- story: happy path
+#  steps:
+#  - intent: greet
+#  - action: utter_greet
+#  - intent: mood_great
+#  - action: utter_happy
+#
+#- story: sad path 1
+#  steps:
+#  - intent: greet
+#  - action: utter_greet
+#  - intent: mood_unhappy
+#  - action: utter_cheer_up
+#  - action: utter_did_that_help
+#  - intent: affirm
+#  - action: utter_happy
+#
+#- story: sad path 2
+#  steps:
+#  - intent: greet
+#  - action: utter_greet
+#  - intent: mood_unhappy
+#  - action: utter_cheer_up
+#  - action: utter_did_that_help
+#  - intent: deny
+#  - action: utter_goodbye
