--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,9 @@
+# The config recipe.
+# https://rasa.com/docs/rasa/model-configuration/
+recipe: default.v1
+
+# Configuration for Rasa NLU.
+# https://rasa.com/docs/rasa/nlu/components/
 language: en
 
 pipeline:
@@ -11,18 +17,11 @@ pipeline:
    max_ngram: 4
  - name: DIETClassifier
    epochs: 100
+   constrain_similarities: true
  - name: EntitySynonymMapper
  - name: ResponseSelector
    epochs: 100
- - name: ResponseSelector
-   epochs: 100
-   retrieval_intent: faq
- - name: ResponseSelector
-   epochs: 100
-   retrieval_intent: chitchat
- - name: DucklingEntityExtractor
-   dimensions: ["email", "number"]
-   url: "https://duckling-server:8000"
+   constrain_similarities: true
  - name: FallbackClassifier
    threshold: 0.3
    ambiguity_threshold: 0.1
@@ -32,4 +31,8 @@ policies:
  - name: TEDPolicy
    max_history: 5
    epochs: 100
+   constrain_similarities: true
  - name: RulePolicy
+ - name: UnexpecTEDIntentPolicy
+   max_history: 5
+   epochs: 100
