--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -153,14 +153,13 @@ nlu:
     - can you tell me do you love me?
     - After registration I see that I have an available balance of 0.00000000. What does this balance represent?
     - Are you ready?
-    - But you're an english site :(
     - Can I ask you questions first?
     - Can I die
     - Can I get a hamburger?
     - Can YouTube talk?
     - Can you call me back ?
-    - Can you give me your datacenter's password
-    - Can you give me your datacenter's password?
+    - Can you give me your datacenters password
+    - Can you give me your datacenters password?
     - Can you make sandwiches?
     - Can you please send me an uber
     - Do I have to accept?
@@ -169,7 +168,7 @@ nlu:
     - Have we met before?
     - HomeBase is advertised as a community. Is there a way to interact with other members of the community?
     - How long does it take to set up a Rasa bot?
-    - I already told you! I'm a shitmuncher
+    - I already told you! Im a shitmuncher
     - I am User
     - I am an opioid addic
     - I am an opioid addict
@@ -192,7 +191,7 @@ nlu:
     - I want to order pizza
     - I want to use pipe
     - I will check
-    - I'm a shitmuncher
+    - Im a shitmuncher
     - Is Rasa really smart?
     - Is this Goal-Oriented Chatbot?
     - Is today saturday?
@@ -214,19 +213,16 @@ nlu:
     - What is todays date
     - What is your hobbies?
     - What makes you better than a human?
-    - What's 1 + 1?
-    - What's do YouTube do
-    - What's your backend system?
+    - Whats 1 + 1?
+    - Whats do YouTube do
+    - Whats your backend system?
     - Where am I right now?
     - Where am I?
     - Who ?
     - Who are your customers
-    - Why don’t you answer?
     - Why is my TRUST score set to 50 after I completed the registration process?
-    - Won't you ask me how I am?
-    - You'r blue.
-    - [Kristin](name), I want to marry you
-    - [german](language)?
+    - Wont you ask me how I am?
+    - Your blue.
     - a tamed mouse will arrive at your doorstep in the next couple of days
     - aRE YOU SINGLE
     - again?
@@ -242,7 +238,6 @@ nlu:
     - are you vegan
     - better than you
     - book a ticket
-    - but I just told you that :(
     - but if rasa is open source why do you have a sales team
     - buy one please
     - buy groceries
@@ -288,16 +283,16 @@ nlu:
     - give me food
     - go back
     - google?
-    - great, I'd like to buy a house
+    - great, Id like to buy a house
     - hang on let me find it
     - have you ever seen Keith Reilly?
     - help with Alma Abrams
     - help with my life
     - hey little mama let em whisper in your ear
-    - hey, I contacted you a couple of days ago but didn't get any response, any news?
+    - hey, I contacted you a couple of days ago but didnt get any response, any news?
     - how
     - how about NYC
-    - how are Alicia Jackson's cats doing?
+    - how are Alicia Jacksons cats doing?
     - how are the kids
     - how can i get them?
     - how can i test this
@@ -316,7 +311,7 @@ nlu:
     - i am hungry, what should i do?
     - i am not a developer but need this for business
     - i am qq
-    - i can't deal with _your_ request
+    - i cant deal with _your_ request
     - i do not care how are you
     - i hope you will be better
     - i immediately need help with implementing the coolest bot you can imagine
@@ -347,9 +342,8 @@ nlu:
     - is rasa a studio?
     - is rasa any good
     - is that any of your business
-    - isn't the newsletter just spam?
-    - it's a pity
-    - i´m hungry
+    - isnt the newsletter just spam?
+    - its a pity
     - license
     - ljljl
     - lunch
@@ -371,12 +365,12 @@ nlu:
     - order pizza
     - personal or work?
     - pizza
-    - please help with my ice cream it's dripping
+    - please help with my ice cream its dripping
     - please hjave lunchj
     - please hurry, i have deadline in two weeks to deliver the bot it is for very big company
     - please play music
     - rasa topics
-    - really? you're so touchy?
+    - really? youre so touchy?
     - refresh
     - region with no. of records
     - remember my name
@@ -385,15 +379,15 @@ nlu:
     - show me a picture of a chicken
     - silly bot
     - sing me a song
-    - so, I'm helping right now to training you?
+    - so, Im helping right now to training you?
     - some thing else
     - someone call the police i think the bot died
     - sorry, i cannot rephrase
     - sudo make me a sandwich
     - tell me about yourself
     - tell me more about next best action
-    - that doesn't sound like a joke
-    - that link doesn't work!
+    - that doesnt sound like a joke
+    - that link doesnt work!
     - the one that is better than you
     - tricked  ya
     - turn off my stove
@@ -431,10 +425,10 @@ nlu:
     - what lnu mean?
     - what the latest news ?
     - what you ate today?
-    - what's 5 + 5
-    - what's a newsletter?
-    - what's gingerale
-    - what's your wife doing this weekend
+    - whats 5 + 5
+    - whats a newsletter?
+    - whats gingerale
+    - whats your wife doing this weekend
     - what?
     - whats that
     - whats the sign
@@ -451,14 +445,13 @@ nlu:
     - which kind
     - who are the engineers at rasa?
     - who are they?
-    - who is [Sharon Zeches](name)
     - who is the MD of samsung bangalore ?
     - who is the president of india ?
     - who is your favourite robot?
     - who let the dog out
     - who was hitler
     - who will anser my email?
-    - who's Bill Gates?
+    - whos Bill Gates?
     - whta you think about gdpr?
     - why do you need that?
     - why its called rasa ?
@@ -475,8 +468,6 @@ nlu:
     - you lock sweety
     - you should learn to count
     - you will know it from the single red rose it carries between its teeth
-    - you're a woman
-    - ı am learning python
     - CALL THE POLICE
     - tertyryutyi
     - wsdrcftvgybhnj
@@ -502,9 +493,6 @@ nlu:
     - i want play ball
     - flight catch up
     - how do you like your coffee
-    - Can you get analytics on who I'm chatting with when I use Rasa
-    - coronavirus
-    - have you heard of corona?
     - where do i type in commandy
     - where to type in commands
     - kiss me
