--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -149,4 +149,4 @@ nlu:
     - Vai chover hoje?
     - Conte uma piada
     - esta é uma mensagem fora de contexto
-    - what is 4 +3 =?
+    - quanto é 4+3?
