--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ recipe: default.v1
 
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
-language: pt-br
+language: pt
 
 pipeline:
   - name: WhitespaceTokenizer
@@ -24,7 +24,7 @@ pipeline:
     epochs: 100
     constrain_similarities: True
   - name: FallbackClassifier
-    threshold: 0.4
+    threshold: 0.65
     ambiguity_threshold: 0.1
 
 policies:
