--- a/domain.yml
+++ b/domain.yml
@@ -36,8 +36,11 @@ responses:
 #  utter_protocolos_sanitarios:
 #  - text: "No link a seguir você pode conferir o documento informando as medidas que estão sendo tomadas para o retorno das atividades presenciais: https://www.unifesp.br/reitoria/dci/images/Recomendacoes_Retomada_CPEC.pdf"
 
-  utter_please_rephrase:
-  - text: "Desculpe, ainda não sou capaz de entender essa mensagem. Você pode tentar reformular a frase ou digitar AJUDA para que eu liste os assuntos que estou apto para conversar."
+utter_please_rephrase:
+  - text: "Desculpe, ainda não sou capaz de entender essa mensagem. Poderia reformular a frase?"
+  - text: "Desculpe, não consegui te entender direito. Você pode perguntar de outra forma?"
+  - text: "Desculpe, não entendi. Poderia reescrever utilizando outras palavras?"
+  - text: "Eu não consegui te entender direito, consegue reformular a frase?"
 
   utter_ajuda:
   - text: "Esses são os assuntos que eu conheço, você pode utilizá-los para encontrar o que deseja: \n
